--- a/TwitterWeb/Views/Homepage/AllUsers.cshtml
+++ b/TwitterWeb/Views/Homepage/AllUsers.cshtml
@@ -17,7 +17,7 @@
             <section class="flex items-center gap-2 cursor-pointer">
                 <h2 class="text-xl font-semibold dark:text-white-0">Home</h2>
 
-                <div class="w-6">
+                @*<div class="w-6">
                     <svg class="dark:fill-white-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
                          aria-label="Cuenta protegida" role="img" data-testid="icon-lock">
                         <g>
@@ -25,7 +25,7 @@
                             </path>
                         </g>
                     </svg>
-                </div>
+                </div>*@
             </section>
         </div>
 
