--- a/TwitterWeb/Views/Homepage/Notification.cshtml
+++ b/TwitterWeb/Views/Homepage/Notification.cshtml
@@ -42,29 +42,29 @@
         <div id="divAllNotification">
 
             <!-- FOLLOW 0 -->
-            <div class="flex gap-2 px-3 py-4 border-b cursor-pointer sm:px-6 sm:gap-5 dark:hover:bg-black-6 border-gray-9 dark:border-black-5 hover:bg-gray-7">
+            <!--<div class="flex gap-2 px-3 py-4 border-b cursor-pointer sm:px-6 sm:gap-5 dark:hover:bg-black-6 border-gray-9 dark:border-black-5 hover:bg-gray-7">-->
                 <!-- EMOJI IDENTIFIER -->
-                <figure class="flex items-start justify-end pl-4">
+                <!--<figure class="flex items-start justify-end pl-4">
                     <svg viewBox="0 0 24 24" aria-hidden="true" class="w-8 fill-primary">
                         <g>
                             <path d="M17.863 13.44c1.477 1.58 2.366 3.8 2.632 6.46l.11 1.1H3.395l.11-1.1c.266-2.66 1.155-4.88 2.632-6.46C7.627 11.85 9.648 11 12 11s4.373.85 5.863 2.44zM12 2C9.791 2 8 3.79 8 6s1.791 4 4 4 4-1.79 4-4-1.791-4-4-4z">
                             </path>
                         </g>
                     </svg>
-                </figure>
+                </figure>-->
 
                 <!-- CONTENT -->
-                <article class="flex flex-col gap-3">
+                <!--<article class="flex flex-col gap-3">-->
                     <!-- USER LOGOS -->
-                    <div class="flex gap-2">
+                    <!--<div class="flex gap-2">
                         <figure class="w-8 duration-200 rounded-full hover:opacity-80 hover:bg-black-1">
                             <img class="object-contain w-full h-full rounded-full"
                                  src="../assets/img/OhYhwdAi_400x400.jpg" alt="User profile photo">
                         </figure>
-                    </div>
+                    </div>-->
 
                     <!-- USERNAMES - it has display flex because we have to mix up anchor and svg tags -->
-                    <h2 class="flex flex-wrap items-center gap-1 text-sm dark:text-gray-3">
+                    <!--<h2 class="flex flex-wrap items-center gap-1 text-sm dark:text-gray-3">
                         <a class="flex items-center gap-1 overflow-hidden font-bold hover:underline decoration-1 text-ellipsis whitespace-nowrap"
                            href="#">
                             Ibai
@@ -78,7 +78,7 @@
                         followed you
                     </h2>
                 </article>
-            </div>
+            </div>-->
 
             <!-- RECENT TWEET 0 -->
             <!--<div class="flex gap-2 px-3 py-4 border-b cursor-pointer sm:px-6 sm:gap-5 dark:hover:bg-black-6 border-gray-9 dark:border-black-5 hover:bg-gray-7">-->
