--- a/TwitterWeb/Views/Profile/UserFriend.cshtml
+++ b/TwitterWeb/Views/Profile/UserFriend.cshtml
@@ -17,7 +17,7 @@
             <section class="flex items-center gap-2">
                 <h2 class="text-xl font-semibold dark:text-white-0">Friends</h2>
 
-                <div class="w-6">
+                @*<div class="w-6">
                     <svg class="dark:fill-white-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
                          aria-label="Cuenta protegida" role="img" data-testid="icon-lock">
                         <g>
@@ -25,7 +25,7 @@
                             </path>
                         </g>
                     </svg>
-                </div>
+                </div>*@
             </section>
         </div>
 
@@ -54,6 +54,15 @@
 <div>
     <!-- FRIEND REQUESTS -->
     <div id="divFriend">
+        <div class="text-center p-2 dark:text-white dark:bg-black-0">
+            <a class="flex items-center justify-center font-semibold div-see-friend-req" href="@Url.Action("UserFriendReq","Profile")">
+                See friend requests
+                <svg class="w-6 h-5 ml-2 dark:fill-white fill-grey-500 group-hover:fill-primary group-hover:bg-blue-100 group-dark:hover:bg-blue-0" viewBox="0 0 640 512" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M224 0a128 128 0 1 1 0 256A128 128 0 1 1 224 0zM178.3 304h91.4c20.6 0 40.4 3.5 58.8 9.9C323 331 320 349.1 320 368c0 59.5 29.5 112.1 74.8 144H29.7C13.3 512 0 498.7 0 482.3C0 383.8 79.8 304 178.3 304zM352 368a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-80c-8.8 0-16 7.2-16 16v64c0 8.8 7.2 16 16 16h48c8.8 0 16-7.2 16-16s-7.2-16-16-16H512V304c0-8.8-7.2-16-16-16z"></path>
+                </svg>
+            </a>
+        </div>
+
         <div class="border-b cursor-pointer border-gray-9 dark:bg-black-0 dark:border-black-5">
             <!-- PERSON -->
             <!--Persons dynamic data will append here-->
