--- a/TwitterWeb/Views/Profile/UserFriendReq.cshtml
+++ b/TwitterWeb/Views/Profile/UserFriendReq.cshtml
@@ -17,7 +17,7 @@
             <section class="flex items-center gap-2">
                 <h2 class="text-xl font-semibold dark:text-white-0">Friend requests</h2>
 
-                <div class="w-6">
+                @*<div class="w-6">
                     <svg class="dark:fill-white-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
                          aria-label="Cuenta protegida" role="img" data-testid="icon-lock">
                         <g>
@@ -25,7 +25,7 @@
                             </path>
                         </g>
                     </svg>
-                </div>
+                </div>*@
             </section>
         </div>
 
@@ -54,6 +54,14 @@
     <div >
         <!-- FRIEND REQUESTS -->
         <div id="divFriendRequest">
+            <div class="text-center p-2 dark:text-white dark:bg-black-0">
+                <a class="flex items-center justify-center font-semibold" href="@Url.Action("UserFriend","Profile")">
+                    See friends
+                    <svg class="w-6 h-5 ml-2 dark:fill-white fill-grey-500 group-hover:fill-primary group-hover:bg-blue-100 group-dark:hover:bg-blue-0" viewBox="0 0 640 512" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M144 0a80 80 0 1 1 0 160A80 80 0 1 1 144 0zM512 0a80 80 0 1 1 0 160A80 80 0 1 1 512 0zM0 298.7C0 239.8 47.8 192 106.7 192h42.7c15.9 0 31 3.5 44.6 9.7c-1.3 7.2-1.9 14.7-1.9 22.3c0 38.2 16.8 72.5 43.3 96c-.2 0-.4 0-.7 0H21.3C9.6 320 0 310.4 0 298.7zM405.3 320c-.2 0-.4 0-.7 0c26.6-23.5 43.3-57.8 43.3-96c0-7.6-.7-15-1.9-22.3c13.6-6.3 28.7-9.7 44.6-9.7h42.7C592.2 192 640 239.8 640 298.7c0 11.8-9.6 21.3-21.3 21.3H405.3zM224 224a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zM128 485.3C128 411.7 187.7 352 261.3 352H378.7C452.3 352 512 411.7 512 485.3c0 14.7-11.9 26.7-26.7 26.7H154.7c-14.7 0-26.7-11.9-26.7-26.7z"></path>
+                    </svg>
+                </a>
+            </div>
             <div class="border-b cursor-pointer border-gray-9 dark:bg-black-0 dark:border-black-5">
                 <!-- PERSON -->
                 <!--Persons dynamic data will append here-->
