--- a/TwitterWeb/Views/SignUp/Index.cshtml
+++ b/TwitterWeb/Views/SignUp/Index.cshtml
@@ -24,7 +24,8 @@
     <script src="~/assets/js/tailwind.config.js"></script>
     <script defer src="~/assets/js/darkMode.js"></script>
     <script src="~/Scripts/CustomJS.js"></script>
-    <script src="~/Scripts/validation.js"></script>
+    <script src="~/Scripts/SignUp.js"></script>
+    <script src="~/Scripts/SweetAlert.js"></script>
 </head>
 
 <body>
@@ -80,22 +81,22 @@
                         <input type="text" id="txtUserName" class="block px-4 pb-2.5 pt-4 w-full text-gray-5 bg-transparent rounded-xl border-[1.9px] border-gray-15 dark:text-white-0 dark:border-gray-5 dark:focus:border-primary focus:outline-none focus:ring-0 focus:border-primary peer dark:valid:border-primary valid:outline-none valid:ring-0 valid:border-primary" placeholder=" " required="" autocomplete="off" />
                         <label for="username" class="absolute cursor-text text-gray-2 duration-200 transform -translate-y-4 scale-90 top-2 z-10 origin-[0] bg-white-0 dark:bg-black-0 px-2 peer-focus:px-2 peer-focus:text-primary peer-focus:dark:text-primary peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-90 peer-focus:-translate-y-4 left-2 peer-valid:px-2 peer-valid:text-primary peer-valid:dark:text-primary peer-valid:scale-90 peer-valid:-translate-y-4">Username</label> 
                     </div>
-                    <span class="spn-error-msg text-red-500" id="spn-error-msg-username"></span>
+                    <span class="spn-error-msg text-red-500 font-semibold text-center" id="spn-error-msg-username"></span>
 
                     <div class="relative">
                         <input type="text" id="txtEmail" class="block px-4 pb-2.5 pt-4 w-full text-gray-5 bg-transparent rounded-xl border-[1.9px] border-gray-15 dark:text-white-0 dark:border-gray-5 dark:focus:border-primary focus:outline-none focus:ring-0 focus:border-primary peer dark:valid:border-primary valid:outline-none valid:ring-0 valid:border-primary" placeholder=" " required="" autocomplete="off" />
                         <label for="email" class="absolute cursor-text text-gray-2 duration-200 transform -translate-y-4 scale-90 top-2 z-10 origin-[0] bg-white-0 dark:bg-black-0 px-2 peer-focus:px-2 peer-focus:text-primary peer-focus:dark:text-primary peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-90 peer-focus:-translate-y-4 left-2 peer-valid:px-2 peer-valid:text-primary peer-valid:dark:text-primary peer-valid:scale-90 peer-valid:-translate-y-4">Email</label>
                     </div>
-                    <span class="spn-error-msg text-red-500" id="spn-error-msg-email"></span>
+                    <span class="spn-error-msg text-red-500 font-semibold text-center" id="spn-error-msg-email"></span>
 
                     <div class="relative">
                         <input type="password" id="txtPassword" class="block px-4 pb-2.5 pt-4 w-full text-gray-5 bg-transparent rounded-xl border-[1.9px] border-gray-15 dark:text-white-0 dark:border-gray-5 dark:focus:border-primary focus:outline-none focus:ring-0 focus:border-primary peer dark:valid:border-primary valid:outline-none valid:ring-0 valid:border-primary" placeholder=" " required="" autocomplete="off" />
                         <label for="password" class="absolute cursor-text text-gray-2 duration-200 transform -translate-y-4 scale-90 top-2 z-10 origin-[0] bg-white-0 dark:bg-black-0 px-2 peer-focus:px-2 peer-focus:text-primary peer-focus:dark:text-primary peer-placeholder-shown:scale-100 peer-placeholder-shown:-translate-y-1/2 peer-placeholder-shown:top-1/2 peer-focus:top-2 peer-focus:scale-90 peer-focus:-translate-y-4 left-2 peer-valid:px-2 peer-valid:text-primary peer-valid:dark:text-primary peer-valid:scale-90 peer-valid:-translate-y-4">Password</label>
                     </div>
-                    <span class="spn-error-msg text-red-500" id="spn-error-msg-password"></span>
+                    <span class="spn-error-msg text-red-500 font-semibold text-center" id="spn-error-msg-password"></span>
 
                     <a class="w-full px-5 py-3 font-bold text-center transition rounded-full cursor-pointer dark:bg-white-0 dark:text-black-0 text-white-0 bg-black-0 hover:scale-110"
-                       id="btnSignup">
+                       id="btnSignup" href="#">
                         Signup
                     </a>
                 </form>
